# OMNIX

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  NOTES.md  README.md  SECURITY.md  TODOS.md  _apply_canvas2d.py  alembic.cloud.ini  conftest.py  docker-compose.dev.yml  omnix.py  package-lock.json  package.json  pyproject.toml  requirements.txt  slice21_recon.md  vitest.config.js
.cursor/plans/: canvas2d-renderer.md
.cursor/rules/: graphrag.mdc  orchestrator.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_cleanup.yml  feature_request.yml
.github/workflows/: ci.yml  cloud-ci.yml  codeql.yml
.omnix/: m2-graphrag-spec.md  omnix.db-shm  omnix.db-wal
benchmarks/: turboscan_self_scan.py
demos/petclinic/: README.md  demo.sh
deploy/: README.md  build-airgap.sh
deploy/docker/: api.Dockerfile  studio-nginx.conf  studio.Dockerfile
deploy/kots/: kots-app.yaml  kots-config.yaml  preflight.yaml
docs/: COBOL_DEMO.md  LEGACY_LANGUAGE_SUPPORT.md  M1_DEMO.md  M2_DEMO.md  PHASES.md  PRODUCTION_READINESS_2026-06-12.md  QUALITY_PROFILE_BASELINES.md  README.md  THREAT_MODEL.md  XFAIL_AUDIT.md  YC_APPLICATION_BRIEF.md  accuracy_boost_m3_5.md  cobol_demo.sh  m1_demo_rehearsal.sh  m2_demo_rehearsal.sh  m2_live_run_protocol.md  self_host_m3_5_2.md
docs/archive/: AUDIT-2026-05-04.md
docs/demo/: 60-second-demo.md
docs/deploy/: airgap.md
docs/dm/: README.md  academic-foundation.md  d1-schema-understanding.md  d2-edge-case-profiling.md  d3-transformation-synthesis.md  d4-bulk-import.md  d5-change-data-capture.md  runbook.md
docs/internal/: README.md
docs/marketing/: landing.md  marketplace_listing.md
docs/onboarding/: scanning.md
docs/verify/: 2026-05-26-deploy-verify.md  2026-05-26-issue-53-empirical-close.md
docs/yc_evidence/: omnix_self_host_451099c_stringutils_fix.json  omnix_self_host_451099c_stringutils_fix.json.sig  omnix_self_host_5f966b6.json  omnix_self_host_5f966b6.json.sig  omnix_self_host_README.md  stringutils_177_method_reconciliation.md  tc401p_m2_phase_b_diagnostic.md
scripts/: README.md  build_studio_viewer_engine.py  export_gephi.py  m1_demo_rehearsal.sh  validate_m2_demo_assets.py  ws_demo_capture.py
services/: README.md
services/github-app/: .env.example  Dockerfile  README.md  jest.config.cjs  package.json  tsconfig.json
services/scientist-java/: README.md  pom.xml
services/scientist-node/: README.md  jest.config.cjs  package.json  tsconfig.json
services/scientist-python/: README.md  pyproject.toml
services/scientist-python/src/omnix_scientist/: __init__.py  core.py
services/scientist-python/tests/: test_scientist_port.py
slices/: SLICE_18c.md  SLICE_18d.md
src/: cli.py  grammar_cmd.py  omnix_version.py
src/agents/: __init__.py  orchestrator.py  tools.py
src/axiom/: cli.py  export_vault.py  hashing.py  keygen.py  params.py  poly.py  provider_vault.py  sampling.py  sign.py  verify.py
src/fabric/: __init__.py  budget.py  config.py  dedup.py  dispatcher.py  handler.py  policy.py  pricing.py  receipts.py  spend.py
src/find_bugs/: bundle.py  cli.py  entry_points.py  fix_fabric.py  fixer.py  path_safety.py  receipt_emitter.py  runner.py  severity.py  test_detect.py  walker.py
src/graph/: __init__.py  exporter.py  store.py
src/mcp/: server.py
src/omnix/: cli.py  cli_cobol.py  cli_scan.py  grammar_cmd.py  omnix_version.py  self_host_cli.py
src/parser/: __init__.py  cli.py  dark_matter_parser.py  entanglement_parser.py  evolution.py  evolution_schema.py  grammar_detect.py  grammar_status_query.py  hint_loader.py  ingest_dispatch.py  llm_fallback.py  memory_graph.py  python_parser.py  quality.py  skip_tracking.py  tree_parse_cache.py  typescript_parser.py  universal.py
src/providers/: __init__.py  client.py  detect.py
src/scan/: __init__.py  handler.py  patterns.py  receipts.py  store.py
src/studio/: NOTES.md  __init__.py  bugs_scan.py  delta.py  parser_bridge.py  recent.py  server.py  session.py  watcher.py  workspace.py  ws_protocol.py
src/verify/: __init__.py  caller_shape.py  cli.py  fuzz_fabric.py  receipt.py  runner.py  signature.py  strategies.py  strategies_universal.py
src/web/: graph_data.json  graph_data_axiom_v2.json  index.html  index.html.canvas2d.bak
tests/: conftest.py  test_agents_tools_security.py  test_legacy_language_support_doc.py  test_no_marketing_superlatives.py  test_notes_audit_trail.py  test_parser.py  test_pip_entry_smoke.py  test_skip_reporting.py
tests/axiom/: kat_mldsa65.json  test_cli.py  test_encoding.py  test_finding_receipt.py  test_kat.py  test_keygen.py  test_merkle.py  test_ntt.py  test_params.py  test_poly.py  test_provider_vault.py  test_sampling.py  test_sign_verify.py  test_verify_cli.py
tests/cli/: conftest.py  test_analyze_emits_signed_receipt.py  test_cli_scan.py  test_detect_changes_command.py  test_impact_command.py  test_status_command.py
tests/cloud/: conftest.py  test_audit_kit.py  test_auth.py  test_cli_verify.py  test_collector_service.py  test_cutover.py  test_cutover_events_broadcast.py  test_daikon_lite.py  test_debezium_configs.py  test_diffy.py  test_drata.py  test_events_bus.py  test_facade_chart_p2.py  test_facade_chart_p4.py  test_facade_writer.py  test_facade_writer_clusters.py  test_facade_writer_runner.py  test_gate6_extended.py  test_git_clone.py  test_git_ingest_api.py  test_github_callback.py  test_helm_schema.py  test_helm_subcharts.py  test_jobs_api.py  test_jobs_fixes.py  test_mainframe_bridge.py  test_observe.py  test_provider_fabric.py  test_rekor.py  test_rekor_onboarding.py  test_scientist.py  test_smoke.py  test_storage.py  test_store_persistence.py  test_stripe_webhook.py  test_tus.py  test_verify_page.py
tests/corpus/: COMMONS_LANG_LICENSE.md  test_commons_lang_corpus.py
tests/dm/: conftest.py
tests/docs/: test_validate_m2_demo_assets.py
tests/fabric/: mocks.py  test_fabric.py  (+6 more)
(+1210 files in other folders)
