[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omnix"
version = "0.6.1"
description = "Code intelligence platform with AXIOM ML-DSA-65 provenance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0",
    "dilithium-py>=1.4,<2.0",
    "click>=8.1",
    "fastapi>=0.110",
    "hypothesis>=6.100",
    "anthropic>=0.40.0,<2.0",
    "RestrictedPython>=8.1,<9.0",
    "psycopg2-binary>=2.9.10,<3.0",
    "keyring>=25.0",
    "uvicorn[standard]>=0.25",
    "watchdog>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "moto[s3]>=5.0", "ruff", "mypy"]
cloud = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "boto3>=1.34",
    "botocore>=1.34",
    "aiobotocore>=2.13",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "PyJWT[crypto]>=2.9",
    "workos>=4.0",
    "GitPython>=3.1",
    "websockets>=12.0",
    "sentry-sdk>=2.5",
    "stripe>=10.0",
    "PyNaCl>=1.5",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
]
github-app = []
helm = []

[project.scripts]
omnix = "omnix.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["omnix*"]

[tool.setuptools.package-data]
"omnix.cloud.verify_page" = ["templates/*.html", "templates/*.js"]
"omnix.cloud.db" = ["migrations/*.mako", "migrations/script.py.mako"]
"omnix.parser" = ["hints/*.json", "quality_profiles/*.json", "quality_profiles/README.md"]
"omnix.semantic" = ["java/vendor/*.jar", "java/vendor/SHA256SUMS", "java/vendor/VENDOR.md", "java/jvm/*.class", "java/jvm/*.java", "java/jvm/build.sh", "java/jvm/README.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: opt-in end-to-end tests that require a real kind cluster (slow; run with --run-integration)",
    "integration_dm: opt-in OMNIX-DM end-to-end tests against live Oracle+PG (Petclinic corpus). Skipped by default; set OMNIX_DM_RUN_INTEGRATION=1 to enable.",
]
norecursedirs = [
    "_blocked",
    "*.egg",
    ".*",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "node_modules",
    "venv",
    "{arch}",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "tests/verify/fixtures/syntaxerr_target.py",  # intentional broken-syntax fixture (parser-level error, not lint-suppressible)
]

[tool.ruff.lint]
# Permissive baseline — ratchet up later
select = ["E", "F", "I", "W"]
ignore = [
    "E501",  # line-length is style, not error
    "F841",  # unused local variables — minor, not a runtime bug
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E", "F401"]              # tests can be sloppier
"tests/verify/fixtures/*" = ["ALL"]    # intentional broken-syntax fixtures
"scripts/*" = ["E", "F401", "F541"]
"omnix.py" = ["E402"]                  # entry-point: path-manipulation precedes imports
"src/omnix/cli.py" = ["E402"]          # entry-point: path-manipulation precedes imports
"src/omnix/studio/delta.py" = ["E402"] # legitimate post-conditional-import pattern
"src/omnix/receipts/ntt.py" = ["E741"] # `l` is intrinsic in NTT math (RFC 8391 / Dilithium)

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_redundant_casts = true
warn_unused_ignores = false

# Permissive baseline: existing modules with type debt are ignored.
# New modules (e.g., omnix.semantic, omnix.spec, omnix.orchestrator, omnix.gates)
# are NOT in this list and WILL be type-checked. Ratchet existing modules off
# this list as type debt is paid down in follow-up slices.
[[tool.mypy.overrides]]
module = [
    "omnix.agents.*",
    "omnix.fabric.*",
    "omnix.find_bugs.*",
    "omnix.graph.exporter",
    "omnix.parser.*",
    "omnix.scan.turboscan.*",
    "omnix.studio.*",
]
ignore_errors = true
