[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "omnix"
version = "0.6.1"
description = "Code intelligence platform with AXIOM ML-DSA-65 provenance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LicenseRef-OMNIX-Source-Available-Evaluation" }
authors = [{ name = "Harshith Gowda" }]
keywords = ["legacy-modernization", "code-migration", "program-graph", "post-quantum", "provenance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=49.0.0",
    "dilithium-py>=1.4,<2.0",
    "jsonschema>=4.26.0",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "sqlparse>=0.5.5",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-rust>=0.24.2",
    "click>=8.4.1",
    "fastapi>=0.136.3",
    "hypothesis>=6.155.2",
    "anthropic>=0.109.1,<2.0",
    "RestrictedPython>=8.2,<9.0",
    "psycopg2-binary>=2.9.12,<3.0",
    "keyring>=25.7.0",
    "uvicorn[standard]>=0.49.0",
    "watchdog>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.4.0", "httpx>=0.28.1", "moto[s3]>=5.2.2", "ruff", "mypy", "pycryptodome>=3.23.0", "aiosqlite>=0.22.1"]
cloud = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "gunicorn>=26.0.0",
    "celery[redis]>=5.6.3",
    "redis>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "boto3>=1.43.29",
    "botocore>=1.43.29",
    "aiobotocore>=3.7.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.32",
    "PyJWT[crypto]>=2.13.0",
    "workos>=8.0.0",
    "GitPython>=3.1.50",
    "websockets>=16.0",
    "sentry-sdk>=2.62.0",
    "stripe>=15.2.1",
    "PyNaCl>=1.6.2",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.4",
]
github-app = []
helm = []

[project.scripts]
omnix = "omnix.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["omnix*"]

[tool.setuptools.package-data]
"omnix" = ["py.typed"]
"omnix.cloud.verify_page" = ["templates/*.html", "templates/*.js"]
"omnix.cloud.db" = ["migrations/*.mako", "migrations/script.py.mako"]
"omnix.parser" = ["hints/*.json", "quality_profiles/*.json", "quality_profiles/README.md"]
"omnix.semantic" = ["java/vendor/*.jar", "java/vendor/SHA256SUMS", "java/vendor/VENDOR.md", "java/jvm/*.class", "java/jvm/*.java", "java/jvm/build.sh", "java/jvm/README.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: opt-in end-to-end tests that require a real kind cluster (slow; run with --run-integration)",
    "integration_dm: opt-in OMNIX-DM end-to-end tests against live Oracle+PG (Petclinic corpus). Skipped by default; set OMNIX_DM_RUN_INTEGRATION=1 to enable.",
]
norecursedirs = [
    "_blocked",
    "*.egg",
    ".*",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "node_modules",
    "venv",
    "{arch}",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "tests/verify/fixtures/syntaxerr_target.py",  # intentional broken-syntax fixture (parser-level error, not lint-suppressible)
]

[tool.ruff.lint]
# Permissive baseline — ratchet up later
select = ["E", "F", "I", "W"]
ignore = [
    "E501",  # line-length is style, not error
    "F841",  # unused local variables — minor, not a runtime bug
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E", "F401"]              # tests can be sloppier
"tests/verify/fixtures/*" = ["ALL"]    # intentional broken-syntax fixtures
"scripts/*" = ["E", "F401", "F541"]
"omnix.py" = ["E402"]                  # entry-point: path-manipulation precedes imports
"src/omnix/cli.py" = ["E402"]          # entry-point: path-manipulation precedes imports
"src/omnix/studio/delta.py" = ["E402"] # legitimate post-conditional-import pattern
"src/omnix/receipts/ntt.py" = ["E741"] # `l` is intrinsic in NTT math (RFC 8391 / Dilithium)

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_redundant_casts = true
warn_unused_ignores = false

# Permissive baseline: existing modules with type debt are ignored.
# New modules (e.g., omnix.semantic, omnix.spec, omnix.orchestrator, omnix.gates)
# are NOT in this list and WILL be type-checked. Ratchet existing modules off
# this list as type debt is paid down in follow-up slices.
[[tool.mypy.overrides]]
module = [
    "omnix.agents.*",
    "omnix.cloud.*",
    "omnix.dm.*",
    "omnix.fabric.*",
    "omnix.find_bugs.*",
    "omnix.graph.exporter",
    "omnix.parser.*",
    "omnix.scan.turboscan.*",
    "omnix.studio.*",
    "omnix.verify.runners.*",
]
ignore_errors = true
