[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omnix-scientist"
version = "0.1.0"
description = "OMNIX Scientist — drop-in GitHub-Scientist port for Python services"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "AXIOM Control Systems Inc." }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["omnix_scientist*"]
